# babies

./: .gitignore  Makefile  Pipfile  Show.py  doit.sh  mypy.ini  pyproject.toml  readme.md  setup.py  tox.ini
.circleci/: config.yml
babies/: command.py  config.py  db.py  display.py  formatting.py  input.py  logger.py  media.py  spotify.py  videos.py  yaml.py  youtube.py
libshow/: db.py
