[tool.poetry]
name = "babies"
version = "1.1.0"
description = "media file player"
authors = ["James Pike <jpike@chilon.net>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
readchar = "^4.1.0"
ruamel-yaml = "^0.18.6"
pyxdg = "^0.28"
requests = "^2.32.3"
python-mpv = "^1.0.6"
python-xlib = "^0.33"
dbus-next = "^0.2.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
flake8 = "^7.0.0"
flake8-black = "^0.3.6"
black = "^24.4.2"
types-requests = "^2.32.0.20240602"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
